Fix Listing spacing

--- a/_sass/_intro.scss
+++ b/_sass/_intro.scss
@@ -268,7 +268,10 @@ ul.number{
 	background: $blue;
 	clear: both;
 }
-li.number:first-child{
+{
+
+}
+a.li.number:first-child{
 	@include span-columns(12);
 	padding: 0;
 	list-style: none;
@@ -290,7 +293,7 @@ li.number:first-child{
 		margin: 2em auto 0;
 	}
 }
-ul li.number{
+a.li.number{
 	@include span-columns(12);
 	margin: 2em auto 0;
 	padding: 0;
